_sass/minimal-mistakes/_navigation.scss
/* ... */
  .page__content + .pagination,
  .page__meta + .pagination,
  .page__share + .pagination,
  .page__comments + .pagination {
    margin-top: 2em;
    padding-top: 2em;
    border-top: 1px solid $border-color;
  }


  /*
     Priority plus navigation
     ========================================================================== */

  .greedy-nav {
    position: relative;
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
          align-items: center;
    background: $background-color;

    a {
      display: block;
      margin: 0 1rem;
      padding: 0.5rem 0;
      color: $masthead-link-color;
      text-decoration: none;

      &:hover {
        color: $masthead-link-color-hover;
      }

      &.site-title {
        margin-left: 0;
      }
    }

    button {
      padding: 0 0.5rem;
      align-self: stretch;
      border: 0;
      outline: none;
      color: #fff;
      background: transparent;
      cursor: pointer;
    }

    .visible-links {
      display: -webkit-box;
      display: flex;
      -webkit-box-pack: end;
      -webkit-box-flex: 1;
                  flex: 1;
      padding-right: 2rem;
      overflow: hidden;

      li {
        -webkit-box-flex: 0;
                    flex: none;

        &:first-child {
          a {
            margin-left: 0;
          }
        }
        &:last-child {
          a {
            margin-right: 0;
          }
        }
      }

      a {
        position: relative;

        &:before {
          content: "";
          position: absolute;
          left: 0;
          bottom: 0;
          height: 4px;
          background: $primary-color;
          width: 100%;
          -webkit-transition: $global-transition;
          transition: $global-transition;
          -webkit-transform: scaleX(0) translate3d(0, 0 , 0);
                  transform: scaleX(0) translate3d(0, 0 , 0); /* hide*/
        }

        &:hover:before {
          -webkit-transform: scaleX(1);
                  -ms-transform: scaleX(1);
              transform: scaleX(1); /* reveal*/
        }
      }
    }

    .links-menu{
      right: 2.5rem;
    }

    .lang-menu{
      right: .2rem;
    }

    .hidden-links {
      position: absolute;
      top: 100%;
      margin-top: 15px;
      padding: 5px;
      border: 1px solid $border-color;
      border-radius: $border-radius;
      background: $background-color;
      box-shadow: 0 2px 4px 0 rgba(#000, 0.16), 0 2px 10px 0 rgba(#000, 0.12);

      &.hidden {
        display: none;
      }

      a {
        margin: 0;
        padding: 10px 20px;
        font-size: $type-size-5;

        &:hover {
          color: $masthead-link-color-hover;
          background: $navicon-link-color-hover;
        }
      }

      &:before {
        content: "";
        position: absolute;
        top: -11px;
        right: 5px;
        width: 0;
        border-style: solid;
        border-width: 0 10px 10px;
        border-color: $border-color transparent;
        display: block;
        z-index: 0;
      }

      &:after {
        content: "";
        position: absolute;
        top: -10px;
        right: 5px;
        width: 0;
        border-style: solid;
        border-width: 0 10px 10px;
        border-color: $background-color transparent;
        display: block;
        z-index: 1;
      }

      li {
        display: block;
        border-bottom: 1px solid $border-color;

        &:last-child {
          border-bottom: none;
        }
      }
    }
  }


  /*
     Navigation list
     ========================================================================== */

  .nav__list {
    margin-bottom: 1.5em;

    input[type="checkbox"],
    label {
      display: none;
    }

    @include breakpoint(max-width ($large - 1px)) {

      label {
        position: relative;
        display: inline-block;
        padding: 0.5em 2.5em 0.5em 1em;
        font-size: $type-size-6;
        font-weight: bold;
        border: 1px solid $light-gray;
        border-radius: $border-radius;
        z-index: 20;
        -webkit-transition: 0.2s ease-out;
        transition: 0.2s ease-out;
        cursor: pointer;

        &:before,
        &:after {
          content: '';
          position: absolute;
          right: 1em;
          top: 1.25em;
          width: 0.75em;
          height: 0.125em;
          line-height: 1;
          background-color: $gray;
          -webkit-transition: 0.2s ease-out;
          transition: 0.2s ease-out;
        }

        &:after {
          -webkit-transform: rotate(90deg);
                  -ms-transform: rotate(90deg);
              transform: rotate(90deg);
        }

        &:hover {
          color: #fff;
          border-color: $gray;
          background-color: mix(white, #000, 20%);

          &:before,
          &:after {
            background-color: #fff;
          }
        }
      }

      /* selected*/
      input:checked + label {
        color: white;
        background-color: mix(white, #000, 20%);

        &:before,
        &:after {
          background-color: #fff;
        }
      }

      /* on hover show expand*/
      label:hover:after {
        -webkit-transform: rotate(90deg);
                -ms-transform: rotate(90deg);
            transform: rotate(90deg);
      }

      input:checked + label:hover:after {
        -webkit-transform: rotate(0);
                -ms-transform: rotate(0);
            transform: rotate(0);
      }

      ul {
        margin-bottom: 1em;
      }

      a {
        display: block;
        padding: 0.25em 0;

        @include breakpoint($large) {
          padding-top: 0.125em;
          padding-bottom: 0.125em;
        }

        &:hover {
          text-decoration: underline;
        }
      }
    }
  }
/* ... */

